--- a/frontend/client/src/components/pages/Main.css
+++ b/frontend/client/src/components/pages/Main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 .main {
+    font-family: 'Montserrat', sans-serif;
     padding: 10px;
 }
