--- a/frontend/client/src/components/pages/Main.css
+++ b/frontend/client/src/components/pages/Main.css
@@ -4,3 +4,27 @@
     font-family: 'Montserrat', sans-serif;
     padding: 10px;
 }
+
+.filters_pet {
+    justify-content: right;
+    float: right;
+}
+.selectFilters {
+    margin-left: 7px;
+}
+.filterInput {
+    margin-left: 7px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+
+}
+.searchInput {
+    width: 12%;
+    display: inline-block;
+    margin-left: 7px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+
+}
